Print order datails with and without price

--- a/La Ñata/Views/Expenses/Report.cshtml
+++ b/La Ñata/Views/Expenses/Report.cshtml
@@ -34,7 +34,7 @@
 
             @* Gastos *@
             <h1 class="text-start mt-5">GASTOS</h1>
-            <hr class="pb-3" />
+            <hr class="mb-3" />
 
             <table class="table table-light table-striped table-bordered">
                 <thead>
@@ -78,7 +78,7 @@
 
             @* Ingresos *@
             <h1 class="text-start mt-5">INGRESOS</h1>
-            <hr class="pb-3" />
+            <hr class="mb-3" />
 
             <table class="table table-light table-striped table-bordered">
                 <thead>
