--- a/La Ñata/Content/table.css
+++ b/La Ñata/Content/table.css
@@ -122,8 +122,8 @@ th,td {
     font-size: 18px;
     color: #fff;
     line-height: 1.4;
-    background-color: #e06c6c;
-    background-image: linear-gradient(to bottom, transparent, #30003ed6);
+    background-color: #bd713b;
+    background-image: linear-gradient(to bottom, transparent, #000000d6);
 }
 
 .table100.ver1 td {
