--- a/La Ñata/Views/Orders/Details.cshtml
+++ b/La Ñata/Views/Orders/Details.cshtml
@@ -115,7 +115,7 @@
                         @Html.Hidden("id_order", Model.id);
                         @Html.Hidden("price", false);
                         <div class="sombra d-flex flex-row me-2 me-sm-5">
-                            <button type="submit" class="btn" style="background-color: #e06c6c; color: white">
+                            <button type="submit" class="btn" style="background-color: #1f65a7; color: white">
                                 Detalle sin precio
                                 <i class="bi bi-printer" style="color: white"></i>
                             </button>
@@ -127,7 +127,7 @@
                         @Html.Hidden("id_order", Model.id);
                         @Html.Hidden("price", true);
                         <div class="sombra d-flex flex-row me-2 me-sm-5">
-                            <button type="submit" class="btn" style="background-color: #e06c6c; color: white">
+                            <button type="submit" class="btn" style="background-color: #1f65a7; color: white">
                                 Detalle con precio
                                 <i class="bi bi-printer" style="color: white"></i>
                             </button>
