--- a/La Ñata/Views/Orders/AddProducts.cshtml
+++ b/La Ñata/Views/Orders/AddProducts.cshtml
@@ -109,7 +109,7 @@
             <div class="d-flex flex-row" style="max-width: fit-content">
                 <div class="d-flex flex-row">
                     <input class="sombra form-control py-2" id="txtSearch" placeholder="Nombre" />
-                    <button id="btnSearch" type="button" class="btn  sombra" style="background-color: #e06c6c">
+                    <button id="btnSearch" type="button" class="btn  sombra" style="background-color: #1f65a7">
                         <i class="bi bi-search" style="color: white"></i>
                     </button>
                 </div>
