--- a/La Ñata/Views/Orders/Edit.cshtml
+++ b/La Ñata/Views/Orders/Edit.cshtml
@@ -120,7 +120,8 @@
             <div class="d-flex flex-row" style="max-width: fit-content">
                 <div class="d-flex flex-row">
                     <input class="sombra form-control py-2" id="txtSearch" placeholder="Nombre" />
-                    <button id="btnSearch" type="button" class="sombra btn" style="background-color: #e06c6c">
+                    <button id="btnSearch" type="button" class="sombra btn" style="background-color: #1f65a7
+">
                         <i class="bi bi-search" style="color: white"></i>
                     </button>
                 </div>
