--- a/La Ñata/Views/Products/Index.cshtml
+++ b/La Ñata/Views/Products/Index.cshtml
@@ -35,11 +35,11 @@
             <div id="searchContainer" class="d-flex justify-content-between flex-column flex-md-row">
                 <div class="d-flex flex-row">
                     <input class="form-control py-2" id="txtSearch" placeholder="Nombre" />
-                    <button id="btnSearch" type="button" class="btn" style="background-color: #e06c6c">
+                    <button id="btnSearch" type="button" class="btn" style="background-color: #1f65a7">
                         <i class="bi bi-search" style="color: white"></i>
                     </button>
                 </div>
-                <a id="btnAdd" class="btn text-white me-auto me-md-0 mt-md-0 mt-3" href="../../Products/Create" style="background-color: #e06c6c">Agregar</a>
+                <a id="btnAdd" class="btn text-white me-auto me-md-0 mt-md-0 mt-3" href="../../Products/Create" style="background-color: #1f65a7">Agregar</a>
             </div>
         </div>
 
