--- a/La Ñata/Content/navbar.css
+++ b/La Ñata/Content/navbar.css
@@ -9,7 +9,7 @@
 }
 
 .navbar-mainbg {
-    background-color: #bd713b;
+    background-color: #324b60;
     padding: 0px;
     background-image: linear-gradient(to bottom, transparent, #000000d6);
 }
