--- a/La Ñata/Content/table.css
+++ b/La Ñata/Content/table.css
@@ -122,7 +122,7 @@ th,td {
     font-size: 18px;
     color: #fff;
     line-height: 1.4;
-    background-color: #bd713b;
+    background-color: #324b60;
     background-image: linear-gradient(to bottom, transparent, #000000d6);
 }
 
