--- a/La Ñata/Views/Orders/Create.cshtml
+++ b/La Ñata/Views/Orders/Create.cshtml
@@ -12,7 +12,7 @@
 
 <div class="d-flex align-items-end">
     <a class="btn btn-dark" href="../../Orders"><i class="bi bi-arrow-left"></i></a>
-    <div class="d-flex flex-grow-1 justify-content-center" style="margin-right: 70px">
+    <div class="d-flex flex-grow-1 justify-content-center me-md-4">
         <h1 class="text-center">Crear pedido</h1>
     </div>
 </div>
