--- a/La Ñata/Views/Orders/Index.cshtml
+++ b/La Ñata/Views/Orders/Index.cshtml
@@ -38,7 +38,7 @@
                 <div class="d-flex flex-row">
                     <input type="text" class="form-control py-2" id="datepicker" readonly placeholder="dd/mm/aaaa" />
                 </div>
-                <a id="btnAdd" class="btn text-white my-sm-auto ms-2" href="../../Orders/Create" style="background-color: #1f65a7"><i class="bi bi-plus-circle"></i></a>
+                <a id="btnAdd" class="btn text-white my-sm-auto ms-2" href="../../Orders/Create" style="background-color: #e38e00"><i class="bi bi-plus-circle"></i></a>
             </div>
         </div>
 
