--- a/La Ñata/Views/Products/Create.cshtml
+++ b/La Ñata/Views/Products/Create.cshtml
@@ -8,7 +8,7 @@
 
 <div class="d-flex align-items-end">
     <a class="btn btn-dark" href="../../Products"><i class="bi bi-arrow-left"></i></a>
-    <div class="d-flex flex-grow-1 justify-content-center" style="margin-right: 70px">
+    <div class="d-flex flex-grow-1 justify-content-center me-md-4">
         <h1 class="text-center">Cargar un nuevo producto</h1>
     </div>
 </div><hr class="pb-3" />
@@ -36,25 +36,25 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="mb-2">
             @Html.LabelFor(model => model.description, "Descripción", htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control", @placeholder = "Nombre del producto" } })
+            @Html.TextBoxFor(model => model.description, new { @class = "form-control", @placeholder = "Nombre del producto" })
             @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger mb-4 mt-3" })
         </div>
 
         <div class="mb-2">
             @Html.LabelFor(model => model.stock, "Stock", htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.stock, new { htmlAttributes = new { @class = "form-control", @type = "number" } })
+            @Html.TextBoxFor(model => model.stock, new { @class = "form-control", @type = "number" })
             @Html.ValidationMessageFor(model => model.stock, "", new { @class = "text-danger mb-4 mt-3" })
         </div>
 
         <div class="mb-2">
             @Html.LabelFor(model => model.price, "Precio", htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.price, new { htmlAttributes = new { @class = "form-control", @type = "number" } })
+            @Html.TextBoxFor(model => model.price, new { @class = "form-control", @type = "number", @placeholder = "$" })
             @Html.ValidationMessageFor(model => model.price, "", new { @class = "text-danger mb-4 mt-3" })
         </div>
 
         <div class="mb-2">
             @Html.LabelFor(model => model.break_price, "Precio por rotura", htmlAttributes: new { @class = "control-label" })
-            @Html.EditorFor(model => model.break_price, new { htmlAttributes = new { @class = "form-control", @type = "number" } })
+            @Html.TextBoxFor(model => model.break_price, new { @class = "form-control", @type = "number", @placeholder = "$" })
             @Html.ValidationMessageFor(model => model.break_price, "", new { @class = "text-danger mb-4 mt-3" })
         </div>
 
@@ -67,6 +67,12 @@
 <script src="~/Scripts/jquery.validate.min.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 <script src="~/Scripts/notification.js"></script>
+
+<script>
+    $("#stock").val(null);
+    $("#price").val(null);
+    $("#break_price").val(null);
+</script>
 
 <style>
     #formContainer {
